styles.css
:root {
   /* --background-image: url("https://source.unsplash.com/random/?wallpaper"); */
    --background-image: url("https://images.unsplash.com/photo-1620121692029-d088224ddc74?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8d2FsbHBhcGVyfHx8fHx8MTY2ODQ3MzA0Nw&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080");
}

@font-face {
    font-family: 'Fira Sans';
    src: url('FiraSans-Regular.ttf');
}

html {
    box-sizing: border-box;
    width: 100vw;
    height: 100vh;
    background: linear-gradient(to bottom, #292d3e 2%, #292d3ea6 100%), var(--background-image);
    background-size: cover !important;
    background-attachment: fixed;
}

body {
    padding: 30px 32px 32px;
    position: relative;
    font-family: 'Fira Sans', sans-serif;
    padding-top: 15vh;
}

.root{
    width: 746px;
    margin: auto;
}

.branding{
    align-items: center;
    display: flex;
    justify-content: left;
    margin-bottom: 0
}

.logo{
    background: url("chrome://branding/content/about-logo.png") no-repeat center;
    background-size: 82px;
    display: inline-block;
    height: 82px;
    width: 82px;
}

.centered * {
    text-align: center;
}

.watermark {
    background: url("chrome://branding/content/firefox-wordmark.svg") no-repeat center center;
    background-size: 134px;
    display: inline-block;
    height: 82px;
    margin-inline-start: 16px;
    width: 134px;
    filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(276deg) brightness(104%) contrast(101%);
}

.box {
    background: #141621a9;
    color: white;
    border-radius: 4px;
    margin-top: 32px;
    padding: 8px 16px;
}

ul {
    list-style: none;
    padding-left: 10px;
}

li {
    margin-bottom: 5px;
}

textarea {
    border: none;
    color: rgb(194, 194, 194);
    font-family: sans-serif;
    font-size: 16px;
    height: 200px;
    width: 90%;
    margin-top: 0 !important;
}

textarea:focus {
    background-color: #171922 !important;
    outline: none;
}

#commandline {
    border: none;
    height: 32px;
    font-size: large;
    font-family: 'Fira Sans', sans-serif;
    width: 96%;
}

#commandline:focus {
    outline: none;
    background: #141621;
    color: white;
}

.grid {
    grid-column-gap: 1rem;
    grid-row-gap: 1rem;
    display: grid;
    grid-template-columns: 1fr;
    margin: 0 !important;
    width: 100% !important;
}

@media (min-width: 800px) {
    .grid {
        grid-template-columns: repeat(auto-fit, minmax(0%, 1fr));
    }
}

@media (max-width: 800px) {
    .root{
        width: 100%;
    }
}

.grid > * {
    min-width: 0;
}

/* a {
    color: #7ddcff;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
} */

a {
    color: #00a1ff;
    text-decoration: none;
}
  
a {
    background:
        linear-gradient(
        to right,
        #000000,
        #000000
    ),
        linear-gradient(
        to right,
        #09e5be,
        #00c5ba,
        #00a4ad,
        #008497,
        #00a1ff
    );
    background-size: 100% 3px, 0 3px;
    background-position: 100% 100%, 0 100%;
    background-repeat: no-repeat;
    transition: background-size 400ms;
}
  
a:hover {
    background-size: 0 3px, 100% 3px;
}

.right {
    float: right;
    margin-top: 10px;
    margin-left: 20px;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    right: 0;
    border-radius: 5px;
    background-color: #292d3e;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    color: whitesmoke;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-overflow: ellipsis;
    max-width: 200px;
    white-space: nowrap;
    overflow: hidden;
}

.dropdown-content a:hover {
    background-color: #1416218a;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown:hover .dropbtn {
    background-color: #3e8e41;
}

